<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:editable="false"
            android:ems="10"
            android:gravity="left"
            android:inputType="none"
            android:textSize="32sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:padding="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnClear"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/clear_sym"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btnBackspace"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/material_icons_extra"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/backspace_sym"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnRadic"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/radic_sym"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnDiv"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/div_sym"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnSeven"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="7"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnEight"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="8"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnNine"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="9"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnMult"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/mult_sym"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnFour"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="4"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnFive"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="5"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnSix"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="6"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnSubt"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/subt_sym"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnOne"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="1"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnTwo"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="2"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnThree"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="3"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnSum"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/sum_sym"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnPlusMinus"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/plus_minus_sym"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnZero"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="0"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnDot"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/dot_sym"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnEqual"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/equal_sym"
                android:textSize="40sp" />
        </TableRow>

    </TableLayout>

</LinearLayout>